--- a/aistudio.html
+++ b/aistudio.html
@@ -1,24 +1,22 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Studio — Mundos de Automação | Tullu Motion</title>
-    <meta name="description" content="A Tullu criou um universo de mundos — cada planeta resolve uma dor real com automação e IA aplicada ao WhatsApp. Você pousa. A gente conecta. Seu negócio ganha eficiência.">
+    <title>AI Studio — CRM de Atendimento com IA | Tullu Motion</title>
+    <meta name="description" content="CRM de Atendimento com IA no WhatsApp: atendimento 24/7, qualificação de leads, follow-up e agendamentos automáticos. Teste grátis.">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tullumotion.com/aistudio">
-    <meta property="og:title" content="AI Studio — Mundos de Automação | Tullu Motion">
-    <meta property="og:description" content="Pouse seu negócio no mundo certo e receba uma automação pronta para operar. Sem complexidade.">
+    <meta property="og:title" content="AI Studio — CRM de Atendimento com IA | Tullu Motion">
+    <meta property="og:description" content="Atenda no WhatsApp com IA 24/7, qualifique leads e marque calls automaticamente. Teste grátis.">
     <meta property="og:image" content="assets/img/aistudio.png.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="AI Studio — Mundos de Automação | Tullu Motion">
-    <meta property="twitter:description" content="Pouse seu negócio no mundo certo e receba uma automação pronta para operar.">
+    <meta property="twitter:title" content="AI Studio — CRM de Atendimento com IA | Tullu Motion">
+    <meta property="twitter:description" content="Atendimento 24/7 no WhatsApp + agendamentos automáticos + painel de CRM. Teste grátis.">
     <meta property="twitter:image" content="assets/img/aistudio.png.png">
 
     <link rel="icon" type="image/png" href="assets/img/tu.png.png">
@@ -45,9 +43,9 @@
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#servicos" class="nav__link">Nossas soluções</a></li>
-                <li class="nav__item"><a href="#como-funciona" class="nav__link">Como funciona</a></li>
-                <li class="nav__item"><a href="#cases" class="nav__link">Resultados</a></li>
+                <li class="nav__item"><a href="#features" class="nav__link">Por que a Tullu?</a></li>
+                <li class="nav__item"><a href="#showcase" class="nav__link">Como funciona</a></li>
+                <li class="nav__item"><a href="#agentes" class="nav__link">Mundos</a></li>
             </ul>
             <a href="https://app.tullumotion.com" class="btn btn--primary nav__cta">JÁ SOU CLIENTE / CRM</a>
         </div>
@@ -68,16 +66,16 @@
             <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
 
             <h1 class="hero__title">
-                Um universo de automação: <span class="gradient-text">pouse no mundo certo</span>
+                CRM de Atendimento com IA: <span class="gradient-text">WhatsApp 24/7</span>
             </h1>
 
             <p class="hero__subtitle">
-                Cada planeta da Tullu resolve uma dor real do seu setor. Você pousa sua empresa, nós conectamos a automação e seu atendimento passa a operar sozinho — direto no WhatsApp.
+                Responda clientes na hora, qualifique leads e agende chamadas automaticamente — direto no WhatsApp. Sem fluxos engessados: ajuste seu atendimento por prompt, rápido e simples.
             </p>
 
             <div class="hero__cta hero__cta--glass">
                 <div class="hero__cta-glass">
-                    <span>ECOSSISTEMA DE MUNDOS INTELIGENTES</span>
+                    <span>TESTE GRÁTIS • ATENDIMENTO AUTOMÁTICO • PAINEL DE CRM</span>
                 </div>
             </div>
 
@@ -85,14 +83,87 @@
     </div>
 </section>
 
-<!-- PLANETS GRID (substitui agentes) -->
+<!-- SHOWCASE (subiu para virar "Como funciona") -->
+<section id="showcase" class="showcase">
+    <div class="container">
+        <header class="section__header">
+            <h2 class="section__title">Você ativa. A IA atende. O CRM organiza.</h2>
+            <p class="section__subtitle">
+                Conversas, status, leads e agendamentos em um só lugar. Você entra só quando o cliente já está pronto.
+            </p>
+            <br>
+            <div class="tag tag--ai">Custa <strong>menos</strong> que um atendente — e trabalha 24/7.</div>
+        </header>
+
+        <figure class="showcase__frame">
+            <img src="assets/img/print-whitelabel.png" class="showcase__img" alt="CRM e painel de automação">
+        </figure>
+
+        <div class="showcase__cta">
+            <a href="https://wa.me/5511959029428?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp.%20Pode%20me%20mostrar%20como%20funciona%3F" class="btn btn--accent btn--large" target="_blank">Quero testar gratuitamente</a>
+            <small class="demo__note">Atende até <strong>3.000 leads simultaneamente</strong></small>
+        </div>
+    </div>
+</section>
+
+<!-- FEATURES (vira "Por que a Tullu?") -->
+<section class="features" id="features">
+    <div class="container">
+        <div class="section__header">
+            <h2 class="section__title">Por que a Tullu?</h2>
+            <p class="section__subtitle">
+                A gente não “instala um bot”. A gente vira parceiro do seu crescimento: melhora o atendimento, organiza o funil e aumenta conversão com automação inteligente no WhatsApp.
+            </p>
+        </div>
+
+        <div class="features__grid">
+            <div class="feature-card">
+                <div class="feature-card__icon">📲</div>
+                <h3 class="feature-card__title">Atendimento 24/7 no WhatsApp</h3>
+                <p>Respostas instantâneas, sem fila e sem mensagens perdidas.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-card__icon">🗓️</div>
+                <h3 class="feature-card__title">Agendamento automático</h3>
+                <p>A IA marca calls e horários sem você precisar correr atrás.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-card__icon">🧠</div>
+                <h3 class="feature-card__title">Qualificação de leads</h3>
+                <p>Triagem por perfil, intenção e orçamento — antes de chegar em você.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-card__icon">💬</div>
+                <h3 class="feature-card__title">Fluxos ajustáveis por prompt</h3>
+                <p>Sem engessamento. Você muda o atendimento rápido, em linguagem natural.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-card__icon">📊</div>
+                <h3 class="feature-card__title">Painel de CRM em tempo real</h3>
+                <p>Status, histórico, tags e métricas para você decidir com clareza.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-card__icon">🔄</div>
+                <h3 class="feature-card__title">Follow-up automático</h3>
+                <p>Recupera leads frios e mantém o funil rodando sem esforço.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- PLANETS GRID (mantém, mas fica depois do “Por que” e “Como funciona”) -->
 <section class="agents" id="agentes">
     <div class="container">
 
         <header class="section__header">
-            <h1 class="hero__title">Escolha seu <span class="gradient-text">mundo</span></h1>
+            <h1 class="hero__title">Escolha o <span class="gradient-text">mundo</span> do seu negócio</h1>
             <p class="hero__subtitle">
-                Cada planeta foi criado para um setor específico. Pouse sua empresa, receba a automação e acompanhe tudo pelo painel em tempo real.
+                Cada mundo já vem com um modelo de atendimento ideal para o seu setor. Você “pousa” sua empresa e começa a testar no WhatsApp.
             </p>
         </header>
 
@@ -106,18 +177,18 @@
                 <div class="agent-card__body">
                     <h3 class="agent-card__title"><strong>Archivus</strong></h3>
                     <p class="agent-card__desc">
-                        O planeta das empresas que lidam com contratos, documentos e burocracia intensa.
+                        Para empresas com contratos, documentos e atendimento consultivo.
                     </p>
                     <ul class="agent-card__bullets">
-                        <li>Atendimento consultivo</li>
+                        <li>Triagem com contexto</li>
                         <li>Leads pré-qualificados</li>
-                        <li>Fluxos sem perda de contexto</li>
+                        <li>Histórico e registro automático</li>
                     </ul>
                 </div>
                 <div class="agent-card__footer">
                     <a class="btn btn--primary" target="_blank"
-                        href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20imobili%C3%A1ria%20ou%20advocacia%20no%20mundo%20Archivus.">
-                        Pousar no Archivus
+                        href="https://wa.me/5511959029428?text=Quero%20testar%20o%20atendimento%20com%20IA%20no%20WhatsApp%20para%20imobili%C3%A1ria%20ou%20advocacia%20no%20mundo%20Archivus.">
+                        Testar no Archivus
                     </a>
                 </div>
             </article>
@@ -130,18 +201,18 @@
                 <div class="agent-card__body">
                     <h3 class="agent-card__title"><strong>Vectra</strong></h3>
                     <p class="agent-card__desc">
-                        O mundo projetado para clínicas: organização, precisão e agendamentos que nunca se perdem.
+                        Para clínicas: agendamento organizado, lembretes e atendimento cuidadoso.
                     </p>
                     <ul class="agent-card__bullets">
-                        <li>Lembretes automáticos</li>
+                        <li>Confirmação automática</li>
                         <li>Fila inteligente</li>
-                        <li>Atendimento humanizado</li>
+                        <li>Agenda sem furos</li>
                     </ul>
                 </div>
                 <div class="agent-card__footer">
                     <a class="btn btn--primary" target="_blank"
-                        href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20cl%C3%ADnica%20no%20mundo%20Vectra.">
-                        Pousar no Vectra
+                        href="https://wa.me/5511959029428?text=Quero%20testar%20o%20atendimento%20com%20IA%20no%20WhatsApp%20para%20cl%C3%ADnica%20no%20mundo%20Vectra.">
+                        Testar no Vectra
                     </a>
                 </div>
             </article>
@@ -154,7 +225,7 @@
                 <div class="agent-card__body">
                     <h3 class="agent-card__title"><strong>Drivon</strong></h3>
                     <p class="agent-card__desc">
-                        O mundo da mobilidade. Feito para concessionárias e vendas automotivas.
+                        Para concessionárias: rapidez, triagem e agendamento de test-drive.
                     </p>
                     <ul class="agent-card__bullets">
                         <li>Triagem por orçamento</li>
@@ -164,8 +235,8 @@
                 </div>
                 <div class="agent-card__footer">
                     <a class="btn btn--primary" target="_blank"
-                        href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20concession%C3%A1ria%20no%20mundo%20Drivon.">
-                        Pousar no Drivon
+                        href="https://wa.me/5511959029428?text=Quero%20testar%20o%20atendimento%20com%20IA%20no%20WhatsApp%20para%20concession%C3%A1ria%20no%20mundo%20Drivon.">
+                        Testar no Drivon
                     </a>
                 </div>
             </article>
@@ -178,18 +249,18 @@
                 <div class="agent-card__body">
                     <h3 class="agent-card__title"><strong>Athlos</strong></h3>
                     <p class="agent-card__desc">
-                        O planeta do movimento. Criado para academias, esportes e espaços fitness.
+                        Para academias: respostas rápidas, ofertas e reengajamento automático.
                     </p>
                     <ul class="agent-card__bullets">
                         <li>Triagem de planos</li>
-                        <li>Ofertas por prova social</li>
+                        <li>Prova social</li>
                         <li>Reengajamento automático</li>
                     </ul>
                 </div>
                 <div class="agent-card__footer">
                     <a class="btn btn--primary" target="_blank"
-                        href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20academia%20no%20mundo%20Athlos.">
-                        Pousar no Athlos
+                        href="https://wa.me/5511959029428?text=Quero%20testar%20o%20atendimento%20com%20IA%20no%20WhatsApp%20para%20academia%20no%20mundo%20Athlos.">
+                        Testar no Athlos
                     </a>
                 </div>
             </article>
@@ -202,18 +273,18 @@
                 <div class="agent-card__body">
                     <h3 class="agent-card__title"><strong>Syntech</strong></h3>
                     <p class="agent-card__desc">
-                        O planeta para empresas de tecnologia, SaaS e projetos sob medida.
+                        Para tecnologia e SaaS: conversas objetivas, requisitos e avanço de funil.
                     </p>
                     <ul class="agent-card__bullets">
                         <li>Qualificação técnica</li>
                         <li>Coleta de requisitos</li>
-                        <li>Conversas diretas para avançar o funil</li>
+                        <li>Próximo passo automático</li>
                     </ul>
                 </div>
                 <div class="agent-card__footer">
                     <a class="btn btn--primary" target="_blank"
-                        href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20empresa%20no%20mundo%20Syntech.">
-                        Pousar no Syntech
+                        href="https://wa.me/5511959029428?text=Quero%20testar%20o%20atendimento%20com%20IA%20no%20WhatsApp%20para%20empresa%20de%20tecnologia%20no%20mundo%20Syntech.">
+                        Testar no Syntech
                     </a>
                 </div>
             </article>
@@ -223,93 +294,17 @@
     </div>
 </section>
 
-<!-- SHOWCASE -->
-<section id="showcase" class="showcase">
-    <div class="container">
-        <header class="section__header">
-            <h2 class="section__title">Depois de pousar, você controla tudo no painel</h2>
-            <p class="section__subtitle">
-                Agendamentos, conversas, status e métricas — tudo organizado em tempo real. Sem planilhas soltas, sem perda de lead.
-            </p>
-            <br>
-            <div class="tag tag--ai">Custa <strong>menos</strong> que um jovem aprendiz.</div>
-        </header>
-
-        <figure class="showcase__frame">
-            <img src="assets/img/print-whitelabel.png" class="showcase__img" alt="CRM e painel de automação">
-        </figure>
-
-        <div class="showcase__cta">
-            <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar gratuitamente</a>
-            <small class="demo__note">Atende até <strong>3.000 leads simultaneamente</strong></small>
-        </div>
-    </div>
-</section>
-
-<!-- RESTANTE DO SITE MANTIDO (features, value-cards, timeline, cta, footer) -->
-<!-- Não alterei classes, apenas textos -->
-
-<!-- FEATURES -->
-<section class="features" id="features">
-    <div class="container">
-        <div class="section__header">
-            <h2 class="section__title">O que criamos</h2>
-            <p class="section__subtitle">
-                Soluções pensadas para operar no dia a dia do seu negócio — conectadas ao WhatsApp e ao seu CRM.
-            </p>
-        </div>
-
-        <div class="features__grid">
-            <div class="feature-card">
-                <div class="feature-card__icon">🌐</div>
-                <h3 class="feature-card__title">Mundos setoriais</h3>
-                <p>Ambientes prontos para receber sua empresa e conectar a automação ideal.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="feature-card__icon">⚙️</div>
-                <h3 class="feature-card__title">Automações sob medida</h3>
-                <p>Fluxos para atendimento, triagem e agendamentos.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="feature-card__icon">📲</div>
-                <h3 class="feature-card__title">Integração com WhatsApp</h3>
-                <p>Operação 24/7 sem precisar de equipe extra.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="feature-card__icon">📊</div>
-                <h3 class="feature-card__title">Painel completo</h3>
-                <p>Dados organizados para você tomar decisões rápidas.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="feature-card__icon">🔄</div>
-                <h3 class="feature-card__title">Follow-up automático</h3>
-                <p>O sistema recupera leads e mantém sua agenda cheia.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="feature-card__icon">🚀</div>
-                <h3 class="feature-card__title">Escala imediata</h3>
-                <p>Até 3.000 conversas simultâneas.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- CTA FINAL -->
+<!-- CTA FINAL (mantido, só texto ajustado) -->
 <section class="cta-section">
     <div class="container">
         <div class="cta-section__card">
-            <h2 class="cta-section__title">Pronto para pousar no seu mundo?</h2>
+            <h2 class="cta-section__title">Quer ver a IA atendendo por você?</h2>
             <p class="cta-section__subtitle">
-                A Tullu conecta sua empresa ao planeta certo e coloca sua automação para rodar em poucos dias.
+                Fale com o agente no WhatsApp, teste gratuitamente e veja como fica seu atendimento quando ele opera 24/7 com CRM organizado.
             </p>
 
             <div class="cta-section__buttons">
-                <a href="https://wa.me/5511959029428?text=Quero%20pousar%20minha%20empresa%20no%20mundo%20ideal." class="btn btn--primary btn--large" target="_blank">Começar agora</a>
+                <a href="https://wa.me/5511959029428?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp." class="btn btn--primary btn--large" target="_blank">Testar grátis no WhatsApp</a>
                 <a href="index.html" class="btn btn--outline btn--large">Voltar para home</a>
             </div>
         </div>
