Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -66,7 +66,7 @@
             <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
 
             <h1 class="hero__title">
-                CRM de Atendimento com IA: <span class="gradient-text">WhatsApp 24/7</span>
+                Atenda clientes no<span class="gradient-text">WhatsApp com IA 24/7</span>
             </h1>
 
             <p class="hero__subtitle">
