Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -70,7 +70,7 @@
             </h1>
 
             <p class="hero__subtitle">
-                Responda clientes na hora, qualifique leads e agende chamadas automaticamente — direto no WhatsApp. Sem fluxos engessados: ajuste seu atendimento por prompt, rápido e simples.
+                Clientes são respondidos na hora, leads são qualificados e agendamentos automáticos aparecem direto na sua agenda, pelo WhatsApp.
             </p>
 
             <div class="hero__cta hero__cta--glass">
