Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -70,7 +70,7 @@
             </h1>
 
             <p class="hero__subtitle">
-                Clientes são respondidos na hora, leads são qualificados e agendamentos automáticos aparecem direto na sua agenda, pelo WhatsApp.
+                Clientes são respondidos na hora, leads são qualificados e agendamentos automáticos aparecem direto na sua agenda.
             </p>
 
             <div class="hero__cta hero__cta--glass">
