Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -103,7 +103,7 @@
     </div>
   </div>
 </section>
-
+<br><br>
 <!-- SHOWCASE (Como funciona) -->
 <section id="showcase" class="showcase">
   <div class="container">
@@ -185,7 +185,7 @@
 <section class="cta-section" id="comparativo">
   <div class="container">
     <div class="cta-section__card">
-      <h2 class="cta-section__title">Por que o AI Studio é melhor que chatbots comuns?</h2>
+      <h1 class="hero__title" style="text-align:justify;" >Por que o <span class="gradient-text">AI Studio</span> é melhor que chatbots comuns?</h1>
       <p class="cta-section__subtitle">
         Chatbots tradicionais travam o atendimento em menus, o AI Studio entende contexto, responde no tom da marca e organiza tudo no CRM, com agenda integrada.
       </p>
@@ -198,36 +198,156 @@
         <span class="tag tag--ai">WhatsApp nativo</span>
         <span class="tag tag--ai">Painel completo</span>
       </div>
-
+<br><br>
       <!-- Comparativo em um único card, separação vertical com br grande -->
       <div style="margin-top: 1.25rem;">
         <div class="glow-card" style="max-width: 980px; margin: 0 auto;">
-          <h3 class="hero2_title" style="text-align:center; margin-bottom: 0.75rem;">Comparativo real de conversa</h3>
+          <h2 class="hero3_title" style="text-align:center; margin-bottom: 0.75rem;">Comparativo real de conversa</h3>
 
           <div class="cards-grid" style="max-width: 980px;">
             <div class="card-base" style="align-items:flex-start;">
-              <div class="pain-card__icon">🤖</div>
-              <div>
-                <strong>Chatbot padrão</strong>
-                <div style="margin-top: .5rem; color: var(--muted);">
-                  “Olá, digite 1 para orçamento, 2 para suporte, 3 para falar com um atendente.”<br>
-                  “Desculpe, não entendi, digite 1, 2 ou 3.”
-                </div>
-              </div>
-            </div>
+              <!-- Comparativo real de conversa (cards com estilos inline) -->
+<div class="cards-grid" style="max-width: 980px;">
 
-            <div class="card-base" style="align-items:flex-start;">
-              <div class="pain-card__icon">⚡</div>
-              <div>
-                <strong>Tullu AI Studio</strong>
-                <div style="margin-top: .5rem; color: var(--muted);">
-                  “Oi, Julia, perfeito, me diz rapidinho se você quer orçamento, agendamento ou suporte, eu já organizo tudo por aqui.”<br>
-                  “João, entendi, posso te fazer 2 perguntas rápidas pra te direcionar certinho e já deixar tudo registrado no CRM?”
-                </div>
-              </div>
-            </div>
-          </div>
+  <!-- ERRADO -->
+  <div class="card-base" style="
+    align-items:flex-start;
+    padding: 18px 18px;
+    border-radius: 18px;
+    background: linear-gradient(180deg, rgba(255, 74, 74, 0.12) 0%, rgba(255, 74, 74, 0.06) 100%);
+    border: 1px solid rgba(255, 74, 74, 0.22);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.35);
+  ">
+    <div style="
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      width: 38px;
+      height: 38px;
+      border-radius: 12px;
+      background: rgba(255, 74, 74, 0.16);
+      border: 1px solid rgba(255, 74, 74, 0.25);
+      flex: 0 0 auto;
+      margin-right: 12px;
+      margin-top: 2px;
+    ">
+      <span style="
+        width: 10px;
+        height: 10px;
+        border-radius: 999px;
+        background: rgba(255, 74, 74, 0.85);
+        box-shadow: 0 0 14px rgba(255, 74, 74, 0.55);
+        display:block;
+      "></span>
+    </div>
 
+    <div style="flex:1;">
+      <div style="display:flex; align-items:center; gap:10px; margin-bottom: 8px;">
+        <span style="
+          font-size: 11px;
+          font-weight: 700;
+          letter-spacing: .12em;
+          text-transform: uppercase;
+          padding: 6px 10px;
+          border-radius: 999px;
+          background: rgba(255, 74, 74, 0.14);
+          border: 1px solid rgba(255, 74, 74, 0.22);
+          color: rgba(255, 210, 210, 0.95);
+        ">ERRADO</span>
+
+        <strong style="color: rgba(255,255,255,0.92); font-size: 16px;">Chatbot padrão</strong>
+      </div>
+
+      <div style="
+        margin-top: .25rem;
+        text-align: left;
+        color: rgba(255,255,255,0.78);
+        line-height: 1.55;
+      ">
+        “Olá, digite 1 para orçamento, 2 para suporte, 3 para falar com um atendente.”<br>
+        “Desculpe, não entendi, digite 1, 2 ou 3.”
+      </div>
+
+      <div style="
+        margin-top: 10px;
+        font-size: 12px;
+        color: rgba(255,255,255,0.60);
+      ">
+        Resultado: fricção, abandono e conversão baixa.
+      </div>
+    </div>
+  </div>
+
+  <!-- CERTO -->
+  <div class="card-base" style="
+    align-items:flex-start;
+    padding: 18px 18px;
+    border-radius: 18px;
+    background: linear-gradient(180deg, rgba(0, 200, 255, 0.20) 0%, rgba(0, 140, 255, 0.12) 100%);
+    border: 1px solid rgba(0, 200, 255, 0.28);
+    box-shadow: 0 12px 34px rgba(0, 145, 255, 0.18), 0 10px 30px rgba(0,0,0,0.35);
+  ">
+    <div style="
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      width: 38px;
+      height: 38px;
+      border-radius: 12px;
+      background: rgba(0, 200, 255, 0.18);
+      border: 1px solid rgba(0, 200, 255, 0.30);
+      flex: 0 0 auto;
+      margin-right: 12px;
+      margin-top: 2px;
+    ">
+      <span style="
+        width: 10px;
+        height: 10px;
+        border-radius: 999px;
+        background: rgba(120, 255, 220, 0.92);
+        box-shadow: 0 0 16px rgba(120, 255, 220, 0.55);
+        display:block;
+      "></span>
+    </div>
+
+    <div style="flex:1;">
+      <div style="display:flex; align-items:center; gap:10px; margin-bottom: 8px;">
+        <span style="
+          font-size: 11px;
+          font-weight: 700;
+          letter-spacing: .12em;
+          text-transform: uppercase;
+          padding: 6px 10px;
+          border-radius: 999px;
+          background: rgba(120, 255, 220, 0.12);
+          border: 1px solid rgba(120, 255, 220, 0.25);
+          color: rgba(180, 255, 235, 0.95);
+        ">CERTO</span>
+
+        <strong style="color: rgba(255,255,255,0.95); font-size: 16px;">Tullu AI Studio</strong>
+      </div>
+
+      <div style="
+        margin-top: .25rem;
+        text-align: left;
+        color: rgba(255,255,255,0.88);
+        line-height: 1.55;
+      ">
+        “Oi, Julia, perfeito. Você quer orçamento, agendamento ou suporte? Eu já organizo tudo por aqui.”<br>
+        “João, entendi. Posso te fazer 2 perguntas rápidas pra te direcionar certinho e já deixar tudo registrado no CRM?”
+      </div>
+
+      <div style="
+        margin-top: 10px;
+        font-size: 12px;
+        color: rgba(255,255,255,0.70);
+      ">
+        Resultado: clareza, velocidade e lead pronto pro time.
+      </div>
+    </div>
+  </div>
+
+</div>
           <br><br>
 
           <div class="showcase__cta" style="margin-top: 0;">
@@ -235,8 +355,8 @@
               href="https://wa.me/5511959029428?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp.%20Quero%20ver%20um%20exemplo%20do%20meu%20neg%C3%B3cio."
               class="btn btn--primary btn--large"
               target="_blank"
-            >Quero testar no meu negócio</a>
-            <small class="demo__note">Inclui suporte 24h, ajustes e estratégia por call</small>
+            >Quero testar no meu negócio</a><br>
+          
           </div>
         </div>
       </div>
