Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -85,7 +85,7 @@
         <div class="hero__cta-glass">
           <span>TESTE GRÁTIS • ATENDIMENTO AUTOMÁTICO • PAINEL DE CRM</span>
         </div>
-      </div>
+      </div><br>
 
       <div class="hero__cta" style="margin-top: 1.25rem;">
         <a
